--- a/sass/modules/_modules.scss
+++ b/sass/modules/_modules.scss
@@ -1238,10 +1238,6 @@ main.filter{
 	}
 }
 
-.search-container{
-	border-bottom: 1px solid $light-grey;
-}
-
 //Search Results & Filter results
 body.search, .filter-results{
 	.container .results-container{
